--- a/client/index.less
+++ b/client/index.less
@@ -2,3 +2,35 @@
   padding: 0;
   border: 0;
 }
+
+#reset, h1 {
+  margin: 2% 4% 2% 10%;
+}
+
+button{
+  width: 80px;
+  height: 30px;
+  background-color: lightblue;
+  border-radius: 5px;
+}
+body {
+  background-image: url('/assets/body_bg1.jpg');
+  background-repeat: repeat;
+}
+
+#board {
+  background-image: url('/assets/planet.jpg');
+  background-size: cover;
+  margin-left: 10%
+}
+
+td{
+  width: 60px;
+  height: 60px;
+  border: 1px solid blue;
+
+}
+
+.live {
+  background-color: #2a2d86
+}
