adjust color of title and font

--- a/client/index.less
+++ b/client/index.less
@@ -5,6 +5,12 @@
 
 #reset, h1 {
   margin: 2% 4% 2% 10%;
+  font-family: sans-serif;
+  font-weight: lighter;
+}
+
+#title {
+  color: #6fa0d4;
 }
 
 button{
