working on adding pieces

--- a/client/index.less
+++ b/client/index.less
@@ -19,6 +19,12 @@ button{
   background-color: lightblue;
   border-radius: 5px;
 }
+
+button:hover {
+  background-color: rgba(70, 123, 150, 0.9);
+  cursor: pointer;
+}
+
 body {
   background-image: url('/assets/body_bg1.jpg');
   background-repeat: repeat;
@@ -34,9 +40,22 @@ td{
   width: 60px;
   height: 60px;
   border: 1px solid blue;
-
 }
 
 .live {
   background-color: #2a2d86
+}
+
+.start {
+
+}
+
+.addGreenPiece {
+  background-image: url('/asset/piece_green.jpg');
+  background-size: cover;
+}
+
+.addBluePiece {
+  background-image: url('/asset/piece_blue.jpg');
+  background-size: cover;
 }
