finish filling board

--- a/client/index.less
+++ b/client/index.less
@@ -18,6 +18,7 @@ button{
   height: 30px;
   background-color: lightblue;
   border-radius: 5px;
+  font-size: 14px;
 }
 
 button:hover {
@@ -51,11 +52,11 @@ td{
 }
 
 .addGreenPiece {
-  background-image: url('/asset/piece_green.jpg');
+  background-image: url('/assets/piece_green.jpg');
   background-size: cover;
 }
 
 .addBluePiece {
-  background-image: url('/asset/piece_blue.jpg');
+  background-image: url('/assets/piece_blue.jpg');
   background-size: cover;
 }
