change green piece

--- a/client/index.less
+++ b/client/index.less
@@ -52,7 +52,7 @@ td{
 }
 
 .addGreenPiece {
-  background-image: url('/assets/piece_green.jpg');
+  background-image: url('/assets/alien2.jpg');
   background-size: cover;
 }
 
