--- a/client/index.jade
+++ b/client/index.jade
@@ -18,14 +18,14 @@ html
       #p2.player
         
     table#board
-      - var values = [1, 2, 3, 4, 5, 6, 7, 8]
+      - var values = [0, 1, 2, 3, 4, 5, 6, 7]
       tbody
         each row in values
           tr(data-row = row)
             each col in values
-              -var zone = 'dead'
+              -var zone = ''
               if (row + col) % 2
-                -var zone = 'live'
+                -var zone = 'valid'
               td(class= zone data-x = col data-y = row)
     
     script(src='/vendor/jquery/dist/jquery.min.js')
