--- a/client/index.less
+++ b/client/index.less
@@ -2,23 +2,29 @@
   padding: 0;
   border: 0;
 }
-
-#reset, h1 {
+h1 {
   margin: 2% 4% 2% 10%;
   font-family: sans-serif;
   font-weight: lighter;
-}
-
-#title {
+  margin: 5% auto 2% auto;
+  text-align: center;
   color: #6fa0d4;
 }
 
-button{
+#controls {
+  display: inline;
+  width: 100px;
+  margin: 2% auto 2% 41%;
+}
+#reset, #start{
+  font-family: sans-serif;
+  font-weight: lighter;
   width: 80px;
   height: 30px;
   background-color: lightblue;
   border-radius: 5px;
   font-size: 14px;
+  margin-right: 20px;
 }
 
 button:hover {
@@ -34,7 +40,7 @@ body {
 #board {
   background-image: url('/assets/planet.jpg');
   background-size: cover;
-  margin-left: 10%
+  margin: 5% auto 2% auto;
 }
 
 td{
