--- a/client/index.less
+++ b/client/index.less
@@ -28,7 +28,7 @@ h1 {
 }
 
 button:hover {
-  background-color: rgba(70, 123, 150, 0.9);
+  background-color: red;
   cursor: pointer;
 }
 
@@ -46,10 +46,10 @@ body {
 td{
   width: 60px;
   height: 60px;
-  border: 1px solid blue;
+  //border: 1px solid blue;
 }
 
-.live {
+.valid {
   background-color: #2a2d86
 }
 
