fix resetting board

--- a/client/index.jade
+++ b/client/index.jade
@@ -10,8 +10,8 @@ html
     h1#title Andrew Checker Game
     
     #controls
-      button#reset Reset
-      button#start Start Game
+      button#reset Reset board
+      button#start Start a new game
       
     #players
       #p1.player
