finish double jump

--- a/client/index.less
+++ b/client/index.less
@@ -54,12 +54,12 @@ td{
 }
 
 .football {
-  background-image: url('/assets/football.svg');
+  background-image: url('/assets/football.png');
   background-size: 100% 100%;
 }
 
 .soccer {
-  background-image: url('/assets/soccerball.svg');
+  background-image: url('/assets/soccerball.png');
   background-size: 100% 100%;
 }
 
