--- a/client/index.less
+++ b/client/index.less
@@ -12,9 +12,9 @@ h1 {
 }
 
 #controls {
-  display: inline;
-  width: 100px;
-  margin: 2% auto 2% 28%;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
 }
 #reset, #start{
   font-family: sans-serif;
@@ -24,7 +24,7 @@ h1 {
   background-color: lightblue;
   border-radius: 5px;
   font-size: 14px;
-  margin-right: 20px;
+  margin: 20px auto 20px auto;
 }
 
 button:hover {
@@ -40,7 +40,7 @@ body {
 #board {
   background-image: url('/assets/planet.jpg');
   background-size: cover;
-  margin: 5% auto 2% auto;
+  margin: 3% auto 2% auto;
 }
 
 td{
