--- a/client/index.less
+++ b/client/index.less
@@ -2,13 +2,14 @@
   padding: 0;
   border: 0;
 }
-h1 {
+h2 {
   margin: 2% 4% 2% 10%;
   font-family: sans-serif;
   font-weight: lighter;
   margin: 5% auto 2% auto;
   text-align: center;
   color: #6fa0d4;
+  font-style: italic;
 }
 
 #controls {
@@ -24,11 +25,10 @@ h1 {
   background-color: lightblue;
   border-radius: 5px;
   font-size: 14px;
-  margin: 20px auto 20px auto;
+  margin: 20px 15px 20px 15px;
 }
 
-button:hover {
-  background-color: red;
+button :hover {
   cursor: pointer;
 }
 
@@ -46,7 +46,6 @@ body {
 td{
   width: 60px;
   height: 60px;
-  //border: 1px solid blue;
 }
 
 .valid {
