--- a/client/index.less
+++ b/client/index.less
@@ -1,11 +1,13 @@
+@import url(http://fonts.googleapis.com/css?family=Megrim);
+
 * {
   padding: 0;
   border: 0;
 }
 h2 {
   margin: 2% 4% 2% 10%;
-  font-family: sans-serif;
-  font-weight: lighter;
+  font-family: 'Megrim', cursive;
+  font-weight: 400;
   margin: 5% auto 2% auto;
   text-align: center;
   color: #6fa0d4;
