Changed the browser title

--- a/client/index.jade
+++ b/client/index.jade
@@ -2,12 +2,11 @@ doctype html
 html
   head
     meta(charset='utf-8')      
-    title Andrew Checkers Game
+    title Andrew Alien Checkers
     link(rel='stylesheet', href='/vendor/font-awesome/css/font-awesome.min.css')
     link(rel='stylesheet', href=isProd ? '/index.min.css' : '/index.css')
     link(rel='shortcut icon', href='/favicon.ico')
   body
-    //h1#title Andrew Checker Game
     h2#title Which alien race will take control of the world?  You decide with a game of alien checkers!!!
     
     #controls
