--- a/client/index.less
+++ b/client/index.less
@@ -55,12 +55,13 @@ td{
 }
 
 .football {
-  background-image: url('/assets/football.png');
+  //background-image: url('/assets/football.png');
+  background-image: url('/assets/footsoldier.png');
   background-size: 100% 100%;
 }
 
 .soccer {
-  background-image: url('/assets/soccerball.png');
+  background-image: url('/assets/soccer.png');
   background-size: 100% 100%;
 }
 
@@ -74,4 +75,14 @@ td{
 
 .hilight {
   background-color: rgba(47, 146, 36, 0.8);
+}
+
+.soccerking {
+  background-image: url('/assets/soccerking.png');
+  background-size: 100% 100%;
+}
+
+.footking {
+  background-image: url('/assets/footking.gif');
+  background-size: 100% 100%;
 }
