minor title edit

--- a/client/index.jade
+++ b/client/index.jade
@@ -7,7 +7,7 @@ html
     link(rel='stylesheet', href=isProd ? '/index.min.css' : '/index.css')
     link(rel='shortcut icon', href='/favicon.ico')
   body
-    h2#title Which alien race will take control of the world?  You decide with a game of alien checkers!!!
+    h2#title Which alien race will take control of the world?  You decide with the game of alien checkers!!!
     
     #controls
       button#reset Reset board
