Remove background to make page load faster

--- a/client/index.less
+++ b/client/index.less
@@ -34,10 +34,10 @@ button :hover {
   cursor: pointer;
 }
 
-body {
-  background-image: url('/assets/body_bg1.jpg');
-  background-repeat: repeat;
-}
+// body {
+//   background-image: url('/assets/body_bg1.jpg');
+//   background-repeat: repeat;
+// }
 
 #board {
   background-image: url('/assets/planet.jpg');
