--- a/client/index.jade
+++ b/client/index.jade
@@ -3,6 +3,7 @@ html
   head
     meta(charset='utf-8')      
     title Andrew Alien Checkers
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/superhero/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/font-awesome/css/font-awesome.min.css')
     link(rel='stylesheet', href=isProd ? '/index.min.css' : '/index.css')
     link(rel='shortcut icon', href='/favicon.ico')
