Change font and button colors

--- a/client/index.less
+++ b/client/index.less
@@ -10,7 +10,7 @@ h2 {
   font-weight: 400;
   margin: 5% auto 2% auto;
   text-align: center;
-  color: #6fa0d4;
+  color: #FF6F1C;
   font-style: italic;
 }
 
@@ -24,10 +24,11 @@ h2 {
   font-weight: lighter;
   width: 200px;
   height: 30px;
-  background-color: lightblue;
+  background-color: #01C901;
   border-radius: 5px;
   font-size: 14px;
   margin: 20px 15px 20px 15px;
+  color: #2A2D86;
 }
 
 button :hover {
